--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Environment variables and secrets
+.env
+.env.local
+.env.production
+.env.development
+# *.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +28,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
