--- a/env.example
+++ b/env.example
@@ -1,12 +1,12 @@
 # SideShift API Configuration
-VITE_SIDESHIFT_API_KEY=your_sideshift_api_key_here
-VITE_SIDESHIFT_SECRET=your_sideshift_secret_here
-VITE_SIDESHIFT_BASE_URL=https://sideshift.ai/api/v2
+VITE_SIDESHIFT_API_KEY=
+VITE_SIDESHIFT_SECRET=
+VITE_SIDESHIFT_BASE_URL=
 
 # Application Configuration
 VITE_APP_NAME=ChainRelief
 VITE_APP_VERSION=1.0.0
-VITE_APP_ENVIRONMENT=development
+VITE_APP_ENVIRONMENT=production
 
 # Network Configuration
 VITE_DEFAULT_CHAIN_ID=1
@@ -14,7 +14,7 @@ VITE_SUPPORTED_CHAINS=1,137,56,43114
 
 # Commission Settings
 VITE_COMMISSION_RATE=0.005
-VITE_AFFILIATE_ID=your_affiliate_id_here
+VITE_AFFILIATE_ID=7FD5vfMtV
 
 # Feature Flags
 VITE_ENABLE_REAL_API=true
